--- a/pikachu.html
+++ b/pikachu.html
@@ -31,10 +31,11 @@
     </div>
   </div>
   <div class="actions">
-    <button data-speed="slow">慢</button>
-    <button data-speed="normal">中</button>
-    <button data-speed="fast">快</button>
+    <button data-speed="slow">慢速</button>
+    <button class="active" data-speed="normal">中速</button>
+    <button data-speed="fast">快速</button>
   </div>
+  <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="./js/main.js">
   
   </script>
